--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,26 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "_null";
 
 body {
-	margin: 10px;
+	margin: 30px;
 }
-
-.text_original {
-	font-size: 15px;
-	line-height: 20px;
-
+.block {
 	p {
-		margin: 0 0 20px 0;
-	}
-}
-
-.text {
-	font-family: 'PT Sans', sans-serif;
-	font-size: 15px;
-	line-height: 20px;
-	font-weight: 700;
-
-	p {
-		margin: 0 0 20px 0;
+		color: rgb(0, 255, 64);
+		span{
+			font-size: 12px;
+		}
 	}
 }
